crates/biome_cli/tests/snapshots/main_cases_reporter_rdjson/reports_code_suggestions_rdjson_check_command.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## Command

```shell
biome check --reporter=rdjson --only=style/useConst --error-on-warnings main.js
```

## `main.js`

```js
let value = 1;
console.log(value);

```

# Termination Message

```block
check ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Some warnings were emitted while running checks.
  


```

# Emitted Messages

```block
{
  "source": {
    "name": "Biome",
    "url": "https://biomejs.dev"
  },
  "diagnostics": [
    {
      "code": {
        "url": "https://biomejs.dev/linter/rules/use-const",
        "value": "lint/style/useConst"
      },
      "location": {
        "path": "main.js",
        "range": {
          "end": {
            "column": 4,
            "line": 1
          },
          "start": {
            "column": 1,
            "line": 1
          }
        }
      },
      "message": "This let declares a variable that is only assigned once.",
      "severity": "WARNING",
      "suggestions": [
        {
          "range": {
            "end": {
              "column": 4,
              "line": 1
            },
            "start": {
              "column": 1,
              "line": 1
            }
          },
          "text": "const"
        }
      ]
    }
  ]
}
```
