crates/biome_cli/tests/snapshots/main_cases_reporter_rdjson/reports_diagnostics_rdjson_check_command.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## Command

```shell
biome check --reporter=rdjson main.ts index.ts
```

## `index.ts`

```ts
import { z} from "z"
import { z, b , a} from "lodash"

a ==b

debugger

let f;
		let f;
```

## `main.ts`

```ts
import { z} from "z"
import { z, b , a} from "lodash"

a ==b

debugger

let f;
		let f;
```

# Termination Message

```block
check ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Some errors were emitted while running checks.
  


```

# Emitted Messages

```block
{
  "source": {
    "name": "Biome",
    "url": "https://biomejs.dev"
  },
  "diagnostics": [
    {
      "code": {
        "url": "https://biomejs.dev/linter/rules/no-unused-imports",
        "value": "lint/correctness/noUnusedImports"
      },
      "location": {
        "path": "index.ts",
        "range": {
          "end": {
            "column": 12,
            "line": 1
          },
          "start": {
            "column": 8,
            "line": 1
          }
        }
      },
      "message": "This import is unused.",
      "severity": "WARNING",
      "suggestions": [
        {
          "range": {
            "end": {
              "column": 21,
              "line": 1
            },
            "start": {
              "column": 1,
              "line": 1
            }
          },
          "text": ""
        }
      ]
    },
    {
      "code": {
        "url": "https://biomejs.dev/linter/rules/no-unused-imports",
        "value": "lint/correctness/noUnusedImports"
      },
      "location": {
        "path": "index.ts",
        "range": {
          "end": {
            "column": 11,
            "line": 2
          },
          "start": {
            "column": 10,
            "line": 2
          }
        }
      },
      "message": "Several of these imports are unused.",
      "severity": "WARNING",
      "suggestions": [
        {
          "range": {
            "end": {
              "column": 13,
              "line": 2
            },
            "start": {
              "column": 10,
              "line": 2
            }
          },
          "text": ""
        }
      ]
    },
    {
      "code": {
        "url": "https://biomejs.dev/linter/rules/no-unused-variables",
        "value": "lint/correctness/noUnusedVariables"
      },
      "location": {
        "path": "index.ts",
        "range": {
          "end": {
            "column": 6,
            "line": 8
          },
          "start": {
            "column": 5,
            "line": 8
          }
        }
      },
      "message": "This variable f is unused.",
      "severity": "WARNING",
      "suggestions": [
        {
          "range": {
            "end": {
              "column": 6,
              "line": 8
            },
            "start": {
              "column": 5,
              "line": 8
            }
          },
          "text": "_f"
        }
      ]
    },
    {
      "code": {
        "url": "https://biomejs.dev/linter/rules/no-unused-variables",
        "value": "lint/correctness/noUnusedVariables"
      },
      "location": {
        "path": "index.ts",
        "range": {
          "end": {
            "column": 8,
            "line": 9
          },
          "start": {
            "column": 7,
            "line": 9
          }
        }
      },
      "message": "This variable f is unused.",
      "severity": "WARNING",
      "suggestions": [
        {
          "range": {
            "end": {
              "column": 8,
              "line": 9
            },
            "start": {
              "column": 7,
              "line": 9
            }
          },
          "text": "_f"
        }
      ]
    },
    {
      "code": {
        "url": "https://biomejs.dev/linter/rules/no-unused-imports",
        "value": "lint/correctness/noUnusedImports"
      },
      "location": {
        "path": "main.ts",
        "range": {
          "end": {
            "column": 12,
            "line": 1
          },
          "start": {
            "column": 8,
            "line": 1
          }
        }
      },
      "message": "This import is unused.",
      "severity": "WARNING",
      "suggestions": [
        {
          "range": {
            "end": {
              "column": 21,
              "line": 1
            },
            "start": {
              "column": 1,
              "line": 1
            }
          },
          "text": ""
        }
      ]
    },
    {
      "code": {
        "url": "https://biomejs.dev/linter/rules/no-unused-imports",
        "value": "lint/correctness/noUnusedImports"
      },
      "location": {
        "path": "main.ts",
        "range": {
          "end": {
            "column": 11,
            "line": 2
          },
          "start": {
            "column": 10,
            "line": 2
          }
        }
      },
      "message": "Several of these imports are unused.",
      "severity": "WARNING",
      "suggestions": [
        {
          "range": {
            "end": {
              "column": 13,
              "line": 2
            },
            "start": {
              "column": 10,
              "line": 2
            }
          },
          "text": ""
        }
      ]
    },
    {
      "code": {
        "url": "https://biomejs.dev/linter/rules/no-unused-variables",
        "value": "lint/correctness/noUnusedVariables"
      },
      "location": {
        "path": "main.ts",
        "range": {
          "end": {
            "column": 6,
            "line": 8
          },
          "start": {
            "column": 5,
            "line": 8
          }
        }
      },
      "message": "This variable f is unused.",
      "severity": "WARNING",
      "suggestions": [
        {
          "range": {
            "end": {
              "column": 6,
              "line": 8
            },
            "start": {
              "column": 5,
              "line": 8
            }
          },
          "text": "_f"
        }
      ]
    },
    {
      "code": {
        "url": "https://biomejs.dev/linter/rules/no-unused-variables",
        "value": "lint/correctness/noUnusedVariables"
      },
      "location": {
        "path": "main.ts",
        "range": {
          "end": {
            "column": 8,
            "line": 9
          },
          "start": {
            "column": 7,
            "line": 9
          }
        }
      },
      "message": "This variable f is unused.",
      "severity": "WARNING",
      "suggestions": [
        {
          "range": {
            "end": {
              "column": 8,
              "line": 9
            },
            "start": {
              "column": 7,
              "line": 9
            }
          },
          "text": "_f"
        }
      ]
    },
    {
      "code": {
        "url": "https://biomejs.dev/assist/actions/organize-imports",
        "value": "assist/source/organizeImports"
      },
      "location": {
        "path": "index.ts",
        "range": {
          "end": {
            "column": 33,
            "line": 2
          },
          "start": {
            "column": 1,
            "line": 1
          }
        }
      },
      "message": "Sort these imports.",
      "severity": "ERROR",
      "suggestions": [
        {
          "range": {
            "end": {
              "column": 32,
              "line": 2
            },
            "start": {
              "column": 10,
              "line": 1
            }
          },
          "text": "a, b , z } from \"lodash\"\nimport { z} from \"z"
        }
      ]
    },
    {
      "code": {
        "url": "https://biomejs.dev/linter/rules/no-double-equals",
        "value": "lint/suspicious/noDoubleEquals"
      },
      "location": {
        "path": "index.ts",
        "range": {
          "end": {
            "column": 5,
            "line": 4
          },
          "start": {
            "column": 3,
            "line": 4
          }
        }
      },
      "message": "Using == may be unsafe if you are relying on type coercion.",
      "severity": "ERROR",
      "suggestions": [
        {
          "range": {
            "end": {
              "column": 5,
              "line": 4
            },
            "start": {
              "column": 5,
              "line": 4
            }
          },
          "text": "="
        }
      ]
    },
    {
      "code": {
        "url": "https://biomejs.dev/linter/rules/no-debugger",
        "value": "lint/suspicious/noDebugger"
      },
      "location": {
        "path": "index.ts",
        "range": {
          "end": {
            "column": 9,
            "line": 6
          },
          "start": {
            "column": 1,
            "line": 6
          }
        }
      },
      "message": "This is an unexpected use of the debugger statement.",
      "severity": "ERROR",
      "suggestions": [
        {
          "range": {
            "end": {
              "column": 9,
              "line": 6
            },
            "start": {
              "column": 6,
              "line": 4
            }
          },
          "text": ""
        }
      ]
    },
    {
      "code": {
        "url": "https://biomejs.dev/linter/rules/no-implicit-any-let",
        "value": "lint/suspicious/noImplicitAnyLet"
      },
      "location": {
        "path": "index.ts",
        "range": {
          "end": {
            "column": 6,
            "line": 8
          },
          "start": {
            "column": 5,
            "line": 8
          }
        }
      },
      "message": "This variable implicitly has the any type.",
      "severity": "ERROR"
    },
    {
      "code": {
        "url": "https://biomejs.dev/linter/rules/no-implicit-any-let",
        "value": "lint/suspicious/noImplicitAnyLet"
      },
      "location": {
        "path": "index.ts",
        "range": {
          "end": {
            "column": 8,
            "line": 9
          },
          "start": {
            "column": 7,
            "line": 9
          }
        }
      },
      "message": "This variable implicitly has the any type.",
      "severity": "ERROR"
    },
    {
      "code": {
        "url": "https://biomejs.dev/linter/rules/no-redeclare",
        "value": "lint/suspicious/noRedeclare"
      },
      "location": {
        "path": "index.ts",
        "range": {
          "end": {
            "column": 11,
            "line": 2
          },
          "start": {
            "column": 10,
            "line": 2
          }
        }
      },
      "message": "'z' is redeclared in the same scope.",
      "severity": "ERROR"
    },
    {
      "code": {
        "url": "https://biomejs.dev/linter/rules/no-redeclare",
        "value": "lint/suspicious/noRedeclare"
      },
      "location": {
        "path": "index.ts",
        "range": {
          "end": {
            "column": 8,
            "line": 9
          },
          "start": {
            "column": 7,
            "line": 9
          }
        }
      },
      "message": "'f' is redeclared in the same scope.",
      "severity": "ERROR"
    },
    {
      "code": {
        "value": "format"
      },
      "message": "Formatter would have printed the following content:",
      "severity": "ERROR"
    },
    {
      "code": {
        "url": "https://biomejs.dev/assist/actions/organize-imports",
        "value": "assist/source/organizeImports"
      },
      "location": {
        "path": "main.ts",
        "range": {
          "end": {
            "column": 33,
            "line": 2
          },
          "start": {
            "column": 1,
            "line": 1
          }
        }
      },
      "message": "Sort these imports.",
      "severity": "ERROR",
      "suggestions": [
        {
          "range": {
            "end": {
              "column": 32,
              "line": 2
            },
            "start": {
              "column": 10,
              "line": 1
            }
          },
          "text": "a, b , z } from \"lodash\"\nimport { z} from \"z"
        }
      ]
    },
    {
      "code": {
        "url": "https://biomejs.dev/linter/rules/no-double-equals",
        "value": "lint/suspicious/noDoubleEquals"
      },
      "location": {
        "path": "main.ts",
        "range": {
          "end": {
            "column": 5,
            "line": 4
          },
          "start": {
            "column": 3,
            "line": 4
          }
        }
      },
      "message": "Using == may be unsafe if you are relying on type coercion.",
      "severity": "ERROR",
      "suggestions": [
        {
          "range": {
            "end": {
              "column": 5,
              "line": 4
            },
            "start": {
              "column": 5,
              "line": 4
            }
          },
          "text": "="
        }
      ]
    },
    {
      "code": {
        "url": "https://biomejs.dev/linter/rules/no-debugger",
        "value": "lint/suspicious/noDebugger"
      },
      "location": {
        "path": "main.ts",
        "range": {
          "end": {
            "column": 9,
            "line": 6
          },
          "start": {
            "column": 1,
            "line": 6
          }
        }
      },
      "message": "This is an unexpected use of the debugger statement.",
      "severity": "ERROR",
      "suggestions": [
        {
          "range": {
            "end": {
              "column": 9,
              "line": 6
            },
            "start": {
              "column": 6,
              "line": 4
            }
          },
          "text": ""
        }
      ]
    },
    {
      "code": {
        "url": "https://biomejs.dev/linter/rules/no-implicit-any-let",
        "value": "lint/suspicious/noImplicitAnyLet"
      },
      "location": {
        "path": "main.ts",
        "range": {
          "end": {
            "column": 6,
            "line": 8
          },
          "start": {
            "column": 5,
            "line": 8
          }
        }
      },
      "message": "This variable implicitly has the any type.",
      "severity": "ERROR"
    },
    {
      "code": {
        "url": "https://biomejs.dev/linter/rules/no-implicit-any-let",
        "value": "lint/suspicious/noImplicitAnyLet"
      },
      "location": {
        "path": "main.ts",
        "range": {
          "end": {
            "column": 8,
            "line": 9
          },
          "start": {
            "column": 7,
            "line": 9
          }
        }
      },
      "message": "This variable implicitly has the any type.",
      "severity": "ERROR"
    },
    {
      "code": {
        "url": "https://biomejs.dev/linter/rules/no-redeclare",
        "value": "lint/suspicious/noRedeclare"
      },
      "location": {
        "path": "main.ts",
        "range": {
          "end": {
            "column": 11,
            "line": 2
          },
          "start": {
            "column": 10,
            "line": 2
          }
        }
      },
      "message": "'z' is redeclared in the same scope.",
      "severity": "ERROR"
    },
    {
      "code": {
        "url": "https://biomejs.dev/linter/rules/no-redeclare",
        "value": "lint/suspicious/noRedeclare"
      },
      "location": {
        "path": "main.ts",
        "range": {
          "end": {
            "column": 8,
            "line": 9
          },
          "start": {
            "column": 7,
            "line": 9
          }
        }
      },
      "message": "'f' is redeclared in the same scope.",
      "severity": "ERROR"
    },
    {
      "code": {
        "value": "format"
      },
      "message": "Formatter would have printed the following content:",
      "severity": "ERROR"
    }
  ]
}
```
